--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,12 @@ dependencies:
   - bzip2=1.0.8=h80987f9_6
   - ca-certificates=2025.2.25=hca03da5_0
   - certifi=2025.1.31=py313hca03da5_0
+  - cffi=1.17.1=py313h3eb5a62_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - click=8.1.7=py313hca03da5_0
+  - cryptography=44.0.1=py313h8026fc7_0
   - distro=1.9.0=py313hca03da5_0
+  - dnspython=2.4.2=py313hca03da5_0
   - expat=2.6.4=h313beb8_0
   - fastapi=0.112.2=py313hca03da5_0
   - frozenlist=1.5.0=py313h80987f9_0
@@ -33,8 +36,10 @@ dependencies:
   - pip=25.0=py313hca03da5_0
   - propcache=0.2.0=py313h80987f9_0
   - psutil=5.9.0=py313h80987f9_1
+  - pycparser=2.21=pyhd3eb1b0_0
   - pydantic=2.10.3=py313hca03da5_0
   - pydantic-core=2.27.1=py313h2aea54e_0
+  - pymongo=4.8.0=py313h80987f9_0
   - pysocks=1.7.1=py313hca03da5_0
   - python=3.13.2=h4862095_100_cp313
   - python_abi=3.13=0_cp313
